--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
     "semi": true,
     "singleQuote": true,
-    "jsxSingleQuote": false,
+    "jsxSingleQuote": true,
     "bracketSpacing": true,
-    "trailingComma": "all",
-    "tabWidth": 4,
+    "trailingComma": "none",
+    "tabWidth": 2,
     "arrowParens": "avoid",
-    "endOfLine": "auto"
+    "endOfLine": "lf"
 }
